perf: minimize binary size

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ clap = { version = "4.3", features = ["derive"] }
 tokio = { version = "1", features = ["rt", "macros"] }
 anyhow = { version = "1" }
 thiserror = { version = "1" }
+
+[profile.release]
+opt-level = "z"
+strip = true
+lto = true
+codegen-units = 1
