--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,15 @@ edition = "2021"
 
 [dependencies]
 run_script = "0.10"
-sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql", "uuid", "macros"] }
+sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "uuid", "macros", "json"] }
 clap = { version = "4.3", features = ["derive"] }
-tokio = { version = "1", features = ["rt", "macros"] }
+tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
 anyhow = { version = "1" }
 thiserror = "1"
-once_cell = "1.18.0"
+once_cell = "1.18"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0", features = ["raw_value"] }
+csv = "1.2"
 
 [profile.release]
 opt-level = "z"
