--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ once_cell = "1.18"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
 csv = "1.2"
+polars = { version = "0.31", features = ["lazy", "csv"] }
 
 [profile.release]
 opt-level = "z"
