--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,14 @@ once_cell = "1.18"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
 csv = "1.2"
+tonic = "0.8"
+prost = "0.11"
+futures = "0.3"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+
+[build-dependencies]
+tonic-build = "0.8"
 
 [profile.release]
 opt-level = "z"
