--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ prost = "0.11"
 futures = "0.3"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+uuid = { version = "1.4.1", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.8"
